--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
 	"private": true,
 	"version": "0.0.0",
 	"type": "module",
-	"homepage": "https://ebenezertiewei.github.io/ticketWebAppReact",
+	"homepage": "https://github.com/ebenezertiewei/ticketWebAppReact",
 	"scripts": {
-		"predeploy": "npm run build",
-		"deploy": "gh-pages -d build",
 		"dev": "vite",
 		"build": "tsc -b && vite build",
+		"preview": "vite preview",
 		"lint": "eslint .",
-		"preview": "vite preview"
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d dist"
 	},
 	"dependencies": {
 		"@tailwindcss/vite": "^4.1.16",
