--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
 		"dev": "vite",
 		"build": "tsc -b && vite build",
 		"preview": "vite preview",
-		"lint": "eslint .",
 		"predeploy": "npm run build",
 		"deploy": "gh-pages -d dist"
 	},
 	"dependencies": {
 		"@tailwindcss/vite": "^4.1.16",
 		"react": "^19.1.1",
-		"react-dom": "^19.1.1"
+		"react-dom": "^19.1.1",
+		"react-router-dom": "^7.9.4"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.36.0",
